# judy

./: .gitignore  Makefile.am  bootstrap  configure.ac
doc/: Makefile.am
examples/: Judy1Op.c
src/Judy1/: Makefile.am
src/JudyHS/: Makefile.am
src/JudyL/: Makefile.am
src/JudySL/: Makefile.am
test/: Makefile.am
